--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,47 +1,13 @@
 ﻿@{
-    ViewData["Title"] = "APC";
+  ViewData["Title"] = "APC";
 }
 
-<body>
-    <div class="Home">
-    <h1 class="display-4">APC Padel</h1>
-    <p><a href="https://docs.microsoft.com/aspnet/core"></a></p>
-</div>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="C:\Users\laura\Desktop\TesisPadel-master\wwwroot\css\apc.png" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="wwwroot\css\cancha.webp" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="wwwroot\css\raquetaypelota.jpg" alt="Third slide">
-    </div>
+
+<body>
+  <div class="IHome">
+    <h1 class="HTitulo text-center">APC Padel</h1>
+    <p><a href="https://docs.microsoft.com/aspnet/core"></a></p>
   </div>
-</div>
-@* Carrousel de imagienes
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="wwwroot\css\apc.png" alt="">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="wwwroot\css\cancha.webp" alt="">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="wwwroot\css\raquetaypelota.jpg" alt="">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only"></span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only"></span>
-  </a>
-</div> *@
 
 </body>
