--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -4,22 +4,21 @@
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">Ocurrio un error al procesar su solicitud.</h2>
 
 @if (Model.ShowRequestId)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        <strong>Pedido ID:</strong> <code>@Model.RequestId</code>
     </p>
 }
 
-<h3>Development Mode</h3>
+<h3>Modo de desarrollo</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
+    Cambiar a <strong>Desarrollo</strong> el entorno mostrara mas informacion detallada sobre el error ocurrido</p>
 <p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+    <strong>El entorno de desarrollo no debe estar habilitado para aplicaciones implementadas</strong>
+    puede dar como resultado que se muestre informacion confidencial de las excepciones a los usuarios finales
+    para la depuracion local habilite el  <strong>desarrollo</strong> medio ambiente configurando el <strong>ASPNETCORE_ENVIRONMENT</strong> 
+    variable de entorno a <strong>desarrollo</strong>
+    y reiniciar la aplicacion.</p>
