--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Iniciar sesión";
 }
 
+
 <body class="BLogin">
     <div class="Blogin">
         <div class="section">
@@ -12,9 +13,16 @@
 			<div class="row full-height justify-content-center">
 				<div class="col-12 text-center align-self-center py-5">
 					<div class="section pb-5 pt-5 pt-sm-2 text-center">
+
 						<h6><span class="LTI-R">Iniciar sesión</span><span class="LTI-R">/</span><span class="LTI-R">Registrarse</span></h6>
+
 			          	<input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
+
+                        @* Boton ppara dar vuelta la tarjeta *@
 			          	<label for="reg-log"></label>
+                        
+                        @* Inisiar sesión *@
+
 						<div class="card-3d-wrap mx-auto">
 							<div class="card-3d-wrapper">
 								<div class="card-front">
@@ -34,14 +42,17 @@
 				      					</div>
 			      					</div>
 			      				</div>
+
+                                @* Registrarse *@
+
 								<div class="card-back">
 									<div class="center-wrap">
 										<div class="section text-center">
 											<h4 class="mb-4 pb-3">Registrarse</h4>
 											<div class="form-group">
-												<input type="text" name="logname" class="form-style" placeholder="Nombre completo" id="logname" autocomplete="off">
+												<input type="text" name="logname" class="form-style" placeholder="Nombre" id="logname" autocomplete="off">
 												<i class="input-icon uil uil-user"></i>
-											</div>	
+											</div>
 											<div class="form-group mt-2">
 												<input type="email" name="logemail" class="form-style" placeholder="E-mail" id="logemail" autocomplete="off">
 												<i class="input-icon uil uil-at"></i>
@@ -62,79 +73,7 @@
 	    </div>
 	</div>
 
-            @* <h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div>
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Iniciar sesión</button>
-                </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Olvidé mi contraseña</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registrarse como nuevo usuario</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Reenviar correo electronico de confirmación</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Utilizar otro servico para iniciar sesión</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            <a href="https://go.microsoft.com/fwlink/?LinkID=532715"></a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div> *@
-
+        
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
