--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,14 +19,18 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Renking</a>
                         </li>
-                                                <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <li class="nav-item">
+                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Torneos</a>
                         </li>
-                                                <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <li class="nav-item">
+                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Clubes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Jugadores</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
