--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -10,23 +10,62 @@ html {
 	}
 }
 .IHome{
-	background-image: url(img/canchaa.webp);
+  background-color: none;
+
 }
 .HTitulo{
 	color: #ffeba7;
 	font-size: 3em;
-	padding-top: 0.5em;
+	padding-top: 0.2em;
 	margin-bottom: 2rem;
 	text-shadow: 2px 4px 1px rgb(67, 53, 9);
 }
 /* Barra nvar */
-.HHH{
+/* .HHH{
 
+} */
+.BTN{
+  border-radius: 4px;
+  height: 44px;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  -webkit-transition : all 200ms linear;
+  transition: all 200ms linear;
+  padding: 0 30px;
+  letter-spacing: 1px;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  text-align: center;
+  border: none;
+  background-color: #ffeba7;
+  color: #102770;
+  box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+  margin-left: 5px;
 }
-.Btn{
-	margin-left: 5px;
+.BTN:active,
+.BTN:focus{  
+  background-color: #102770;
+  color: #ffeba7;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
-.BtnApc{
+.BTN:hover{  
+  background-color: #102770;
+  color: #ffeba7;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+}
+
+.BTNApc{
 	color: gold;
 	margin: 5px;
 	font-size: 30px;
@@ -46,13 +85,12 @@ body{
 	font-size: 15px;
 	line-height: 1.7;
 	color: #c4c3ca;
-	background-color: #1f2029;
+	background-image: url(https://www.onlytenis.com/blog/wp-content/uploads/2022/02/diferencias-entre-padel-y-tenis.jpg);
 	overflow-x: hidden;
 }
 .LTI-R{
 	color: #102770;
-	background-color: #ffeba7;
-
+  background-color: #ffeba7;
 }
 a {
 	cursor: pointer;
@@ -314,7 +352,7 @@ h6 span{
   color: #ffeba7;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
-m
+
 .logo {
 	position: absolute;
 	top: 30px;
