--- a/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Acceso denegado";
+    ViewData["Title"] = "Access denied";
 }
 
 <header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">No tienes acceso a este sitio.</p>
+    <p class="text-danger">You do not have access to this resource.</p>
 </header>
