--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         
                         <li class="nav-item">
-                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Renking</a>
+                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Ranking</a>
                         </li>
                         <li class="nav-item">
                             <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Torneos</a>
