--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,13 +24,13 @@
                             <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Ranking</a>
                         </li>
                         <li class="nav-item">
-                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Torneos</a>
+                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="Torneo" asp-action="Index">Torneos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Clubes</a>
+                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="Clubs" asp-action="Index">Clubes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Jugadores</a>
+                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="Jugadores" asp-action="Index">Jugadores</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
