--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-white bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">APC</a>
+                <a class="APC nav-link" asp-area="" asp-controller="Home" asp-action="Index">A P C</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,16 +21,16 @@
                     <ul class="navbar-nav flex-grow-1">
                         
                         <li class="nav-item">
-                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Ranking</a>
+                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Torneos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Torneos</a>
+                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Ranking</a>
                         </li>
                         <li class="nav-item">
-                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Clubes</a>
+                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Clubes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="BTN nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Jugadores</a>
+                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Jugadores</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
