--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -21,9 +21,9 @@ html {
 	text-shadow: 2px 4px 1px rgb(67, 53, 9);
 }
 /* Barra nvar */
-/* .HHH{
-
-} */
+.B{
+  background-color: #2a2b38;
+}
 .BTN{
   border-radius: 4px;
   height: 44px;
@@ -53,6 +53,7 @@ html {
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
   margin-left: 5px;
 }
+
 .BTN:active,
 .BTN:focus{  
   background-color: #102770;
@@ -65,17 +66,47 @@ html {
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 
-.BTNApc{
-	color: gold;
-	margin: 5px;
-	font-size: 30px;
-	text-decoration: none;
-}
-.LoginN{
-	margin-left: 5px;
-	color: #102770;
+.APC{
+  border-radius: 4px;
+  height: 44px;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  -webkit-transition : all 200ms linear;
+  transition: all 200ms linear;
+  padding: 0 30px;
+  letter-spacing: 1px;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  text-align: center;
+  border: none;
+  background-color: #102770;
+  color: #ffeba7;
+  box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+  margin-left: 5px;
 }
 
+.APC:active,
+.APC:focus{  
+  background-color: #ffeba7;
+  color: #102770;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+}
+.APC:hover{  
+  background-color: #ffeba7;
+  color: #102770;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+}
 /* LOGIN-REGISTER */
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
 
@@ -90,7 +121,7 @@ body{
 }
 .LTI-R{
 	color: #102770;
-  background-color: #c4c3ca;
+  background-color: #ffeba7;
 }
 a {
 	cursor: pointer;
