--- a/Views/Clubs/Index.cshtml
+++ b/Views/Clubs/Index.cshtml
@@ -1,49 +1,55 @@
+@model IEnumerable<TesisPadel.Models.Club>
+
 @{
-    ViewData["Title"] = "Club";
+    Layout = null;
 }
 
-<body class="body5">
-    <!--modal-->
-    <div class="modal fade" id="ModalClub"tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Agregar Club</h5>
-                    <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close">
-            </div>
-            <div class="modal-body">
-                <input type="hidden" id="ClubId" value="0">
-                <div>
-                    <label class="control-label">Club</label>
-                    <input type="text" class="from-control" id="Nombre" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" onclick="GuardarClub()" class="btn btn-primary" id="GuardarClub">Guardar</button>
-                </div>
-            </div>
-           </div>
-        </div>
-     </div>
-<div>
-    <h1 class="display-4 titulo">Club</h1>
-    <!--Button trigger modal-->
-    <div class="bm-2">
-        <button type="button" onclick="VaciarFormulario()" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalClub">
-            Nuevo
-        </button>   
-    </div>
-    <table class="table table-bordered table-striped table-condensed">
-        <thead>
-            <tr>
-                <th>Club</th>
-            </tr>    
-        </thead>
-        <tbody id="tbody-club"></tbody>
-    </table>
-</div>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+</head>
+<body>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nombre)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Direccion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Eliminado)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Direccion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Eliminado)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.ClubId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.ClubId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.ClubId">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
 </body>
-
-@section Scripts{
-    <script src="~/js/club-1.0.0.js"></script>
-}
+</html>
