--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,8 @@
 
     <footer>
         <div class="Footer">
-
+            <h5>Seguinos en nuestras redes</h5>
+            &copy; 2023 Copyright © - Todos los derechos reservados. -
         </div>
     </footer>
 
