--- a/Views/Club/Edit.cshtml
+++ b/Views/Club/Edit.cshtml
@@ -1,7 +1,7 @@
 @model TesisPadel.Models.Club
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
+    <title>Editar</title>
 </head>
 <body>
 
