--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
             <div class="container-fluid">
                 @* Propiedades del logo (Boton de "inicío/Home"). *@
                 <a class=" nav-link" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="css/img/APC.png" alt="logo" width="150px" >
+                    <img src="css/img/APC.png" class="APC" alt="logo" width="150px" >
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -25,13 +25,16 @@
                     <ul class="navbar-nav flex-grow-1">
                         
                         <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Torneos</a>
+                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Noticias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Ranking</a>
                         </li>
                         <li class="nav-item">
                             <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Torneos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Clubes</a>
+                            <a class="BTN nav-link" asp-area="" asp-controller="Club" asp-action="Index">Clubes</a>
                         </li>
                         <li class="nav-item">
                             <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Jugadores</a>
