--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -1,7 +1,7 @@
 @model IEnumerable<TesisPadel.Models.Club>
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -13,7 +13,7 @@
 </head>
 <body>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -43,9 +43,9 @@
                 @Html.DisplayFor(modelItem => item.Eliminado)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ClubId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ClubId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ClubId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ClubId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.ClubId">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.ClubId">Eliminar</a>
             </td>
         </tr>
 }
