--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -17,7 +17,7 @@
 else
 {
     <li class="nav-item">
-        <a class="LoginN nav-link" asp-area="Identity" asp-page="/Account/Login">Iniciar sesión</a>
+        <a class="link" asp-area="Identity" asp-page="/Account/Login">Iniciar sesión</a>
     </li>
 }
 </ul>
