--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -47,23 +47,29 @@
 
   <div>
     <h2>Novedades torneos</h2>
-    @* <div class="card1 col-lg-4 col-md-6" style="width: 18rem;">
-      <img class="card-img-top" src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80" alt="Card image cap">
+    <div class="card col-lg-4 col-md-6" style="width: 18rem;">
+      <img class="card-img-top"
+        src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80"
+        alt="Card image cap">
       <div class="card-body">
         <p class="card-text"></p>
       </div>
     </div>
-    <div class="card2 col-lg-4 col-md-6" style="width: 18rem;">
-      <img class="card-img-top" src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80" alt="Card image cap">
+    <div class="card col-lg-4 col-md-6" style="width: 18rem;">
+      <img class="card-img-top"
+        src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80"
+        alt="Card image cap">
       <div class="card-body">
         <p class="card-text"></p>
       </div>
     </div>
-    <div class="card3 col-lg-4 col-md-6" style="width: 18rem;">
-      <img class="card-img-top" src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80" alt="Card image cap">
+    <div class="card col-lg-4 col-md-6" style="width: 18rem;">
+      <img class="card-img-top"
+        src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80"
+        alt="Card image cap">
       <div class="card-body">
         <p class="card-text"></p>
       </div>
-    </div> *@
+    </div>
 
 </body>
