--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,9 +10,8 @@
     <p><a href="https://docs.microsoft.com/aspnet/core"></a></p>
   </div>
 
-
-@* Carrousel noticias *@
-@* <section>
+/s@* Carrousel noticias *@
+@* <section id="noticia">
 
   <section class="hero-section">
   <div class="card-grid">
@@ -45,6 +44,7 @@
 </section> 
 
 </section> *@
+
 
 
   
