--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         
                         <li class="nav-item">
-                            <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Torneos</a>
+                            <a class="BTN nav-link" asp-area="noticias" asp-controller="" asp-action="Index">Noticias</a>
                         </li>
                         <li class="nav-item">
                             <a class="BTN nav-link" asp-area="" asp-controller="" asp-action="Index">Torneos</a>
