--- a/Views/Club/Create.cshtml
+++ b/Views/Club/Create.cshtml
@@ -1,7 +1,9 @@
 @model TesisPadel.Models.Club
-
 @{
-    Layout = null;
+    ViewData["Title"] = "Club";
+}
+@{
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -9,7 +11,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
+    <title>Crear</title>
 </head>
 <body>
 
