--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -1,5 +1,7 @@
 @model IEnumerable<TesisPadel.Models.Club>
-
+@{
+    ViewData["Title"] = "Club";
+}
 @{
     Layout = null;
 }
@@ -13,7 +15,7 @@
 </head>
 <body>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear</a>
 </p>
 <table class="table">
     <thead>
@@ -43,8 +45,7 @@
                 @Html.DisplayFor(modelItem => item.Eliminado)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ClubId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ClubId">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.ClubId">Edit</a>
                 <a asp-action="Delete" asp-route-id="@item.ClubId">Delete</a>
             </td>
         </tr>
@@ -52,4 +53,7 @@
     </tbody>
 </table>
 </body>
+@section Scripts{
+    <script src="~/js/club-1.0.0.js"></script>
+}
 </html>
