--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,11 +18,10 @@
 
   </div>
 
-  <hr>
 
-    @* Carrousel noticias *@
+  @* Carrousel noticias *@
 
-  <div>
+  @* <div>
     <h2>Ultimas noticias</h2>
 
     <div class="contenu_carou_auto">
@@ -41,35 +40,70 @@
       </div>
     </div>
 
-  </div>
+  </div> *@
 
   <hr>
 
-  <div>
-    <h2>Novedades torneos</h2>
-    <div class="card col-lg-4 col-md-6" style="width: 18rem;">
-      <img class="card-img-top"
-        src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80"
-        alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text"></p>
+@* Carrousel para fotos random *@
+  
+  <div class="body2">
+    <div class="container">
+      <div class="item">
+        <div class="quote">
+          <p>.<span></span></p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="quote">
+          <p><span></span></p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="quote">
+          <p><span></span></p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="quote">
+          <p><span></span></p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="quote">
+          <p><span></span></p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="quote">
+          <p><span></span></p>
+        </div>
       </div>
     </div>
+
+    @* <h2>Novedades torneos</h2>
     <div class="card col-lg-4 col-md-6" style="width: 18rem;">
-      <img class="card-img-top"
-        src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80"
-        alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text"></p>
-      </div>
+    <img class="card-img-top"
+    src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80"
+    alt="Card image cap">
+    <div class="card-body">
+    <p class="card-text"></p>
+    </div>
     </div>
     <div class="card col-lg-4 col-md-6" style="width: 18rem;">
-      <img class="card-img-top"
-        src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80"
-        alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text"></p>
-      </div>
+    <img class="card-img-top"
+    src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80"
+    alt="Card image cap">
+    <div class="card-body">
+    <p class="card-text"></p>
     </div>
+    </div>
+    <div class="card col-lg-4 col-md-6" style="width: 18rem;">
+    <img class="card-img-top"
+    src="https://images.unsplash.com/photo-1503803548695-c2a7b4a5b875?ixlib=rb-1.2.1&w=1000&q=80"
+    alt="Card image cap">
+    <div class="card-body">
+    <p class="card-text"></p>
+    </div> *@
+  </div>
 
 </body>
