--- a/Views/Noticias/Index.cshtml
+++ b/Views/Noticias/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<TesisPadel.Models.Club>
+@* @model IEnumerable<TesisPadel.Models.Club>
 
 @{
     Layout = "_Layout";
@@ -52,4 +52,4 @@
     </tbody>
 </table>
 </body>
-</html>
+</html> *@
