--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,8 +11,7 @@
     <p><a href="https://docs.microsoft.com/aspnet/core"></a></p>
   </div>
 
-<<<<<<< HEAD
-/s@* Carrousel noticias *@
+/s@* Carrousel noticias *@|
 @* <section id="noticia">
 
   <section class="hero-section">
@@ -42,8 +41,6 @@
         <h3 class="card__heading">Torneos</h3>
       </div>
     </a>
-=======
->>>>>>> c1da81b067f2345e0e9725b6ebc0f98ff5534b11
   <div>
 
     <img src="https://www.onlytenis.com/blog/wp-content/uploads/2022/02/diferencias-entre-padel-y-tenis.jpg"
