--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<TesisPadel.Models.Club>
+@* @model IEnumerable<TesisPadel.Models.Club>
 @{
     ViewData["Title"] = "Club";
 }
@@ -66,4 +66,4 @@
 @section Scripts{
     <script src="~/js/club-1.0.0.js"></script>
 }
-</html>
+</html> *@
