--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,16 +11,21 @@
     <p><a href="https://docs.microsoft.com/aspnet/core"></a></p>
   </div>
 
-     <div>
+  <div>
 
     <img src="https://www.onlytenis.com/blog/wp-content/uploads/2022/02/diferencias-entre-padel-y-tenis.jpg"
       class="ImgHome" style="position: fixed center;">
-  </div> 
+  </div>
 
-<hr>
+  <hr>
 
-@* Carrousel para fotos random *@
-  
+  <div style="positon: fixed center;">
+    <h2>El padel se apodera de tu vida, ¡prepárate para la diversión!</h2>
+  </div>
+
+
+  @* Carrousel para fotos random *@
+
   <div class="body2">
     <div class="container">
       <div class="item">
@@ -57,5 +62,49 @@
   </div>
 
   <hr>
+
+  <h1 class="preguntas">Preguntas frecuentes</h1>
+
+  <div class="row">
+    <div class="Card col-lg-5">
+      <div class="Card1">
+        <div class="card-body">
+          <h4>¿Cómo empezar a jugar al padel?</h4>
+          <p>Para empezar, necesitarás unirse a nuestro club y reservar una pista. ¡También ofrecemos clases para
+            principiantes!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="Card col-lg-5">
+      <div class="Card2">
+        <div class="card-body">
+          <h4>¿Necesito comprar mi propia raqueta?</h4>
+          <p>Sí, pero ofrecemos una tienda donde podrás comprar todo lo necesario para comenzar a jugar</p>
+        </div>
+      </div>
+    </div>
+
+      <div class="row">
+    <div class="Card col-lg-5">
+      <div class="Card3">
+        <div class="card-body">
+          <h4>¿Ofrecen entrenamiento para principiantes?</h4>
+          <p>Sí, tenemos entrenadores expertos listos para ayudarte a mejorar tus habilidades desde cero</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="Card col-lg-5">
+      <div class="Card4">
+        <div class="card-body">
+          <h4>¿Cómo me uno a un equipo?</h4>
+          <p>Simplemente regístrate y nuestro equipo te emparejará con jugadores de habilidades similares</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
 
 </body>
