--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -11,11 +11,12 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
 </head>
-<body>
+<body class="rankingC">
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" style="background-color: white;">Create New</a>
 </p>
-<table class="table">
+<div class="FormatoT">
+   <table class="table" style="color: white;">
     <thead>
         <tr>
             <th>
@@ -43,13 +44,14 @@
                 @Html.DisplayFor(modelItem => item.Puntos)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.RankingId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RankingId">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.RankingId">Edit</a> 
                 <a asp-action="Delete" asp-route-id="@item.RankingId">Delete</a>
             </td>
         </tr>
 }
     </tbody>
-</table>
+</table> 
+</div>
+
 </body>
 </html>
