--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -15,7 +15,8 @@
 <p>
     <a asp-action="Create">Crear nuevo</a>
 </p>
-<table class="table">
+<div class="FormatoT">
+    <table class="table" style="color: white;">
     <thead>
         <tr>
             <th>
@@ -80,5 +81,7 @@
 }
     </tbody>
 </table>
+</div>
+
 </body>
 </html>
