--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,8 +20,15 @@ html {
   overflow-x: hidden;
   background-color: #000000;
 }
+.rankingC{
+  background-color: white;
 
+}
 
+.FormatoT{
+  color:#ffffff;
+  margin-top: 5rem;
+}
 .HTitulo{
 	color: #ffeba7;
 	font-size: 3em;
