Correcciones de vistas

--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -8,18 +8,16 @@
 
 <!DOCTYPE html>
 
-<html>
+<html class="Formato">
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title style="color: white;">club</title>
 </head>
 <body>
 <p>
-<<<<<<< HEAD
-    <a asp-action="Create">Crear</a>
-=======
-    <a asp-action="Create">Crear nuevo</a>
->>>>>>> c1da81b067f2345e0e9725b6ebc0f98ff5534b11
+
+    <a asp-action="Create" style="color: white;">Crear Nuevo</a>
+
 </p>
 <div class="FormatoT">
     <table class="table" style="color: white;">
@@ -30,9 +28,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Direccion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Eliminado)
             </th>
             <th></th>
         </tr>
