--- a/Views/Noticias/Index.cshtml
+++ b/Views/Noticias/Index.cshtml
@@ -43,8 +43,7 @@
                 @Html.DisplayFor(modelItem => item.Eliminado)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.NoticiaId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.NoticiaId">Detalles</a> |
+                <a asp-action="Edit" asp-route-id="@item.NoticiaId">Editar</a>
                 <a asp-action="Delete" asp-route-id="@item.NoticiaId">Eliminar</a>
             </td>
         </tr>
