--- a/Views/Ranking/Index.cshtml
+++ b/Views/Ranking/Index.cshtml
@@ -6,17 +6,17 @@
 
 <!DOCTYPE html>
 
-<html>
+<html class="Formato">
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title style="color: white;">Ranking</title>
 </head>
-<body class="rankingC">
+<body>
 <p>
-    <a asp-action="Create" style="background-color: white;">Create New</a>
+    <a asp-action="Create" style="color: white;">Crear Nuevo</a>
 </p>
 <div class="FormatoT">
-   <table class="table" style="color: white;">
+   <table class="table " style="color: white; ">
     <thead>
         <tr>
             <th>
