--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -6,14 +6,14 @@
 
 <!DOCTYPE html>
 
-<html>
+<html class="Formato">
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title style="color: white;">Usuario</title>
 </head>
 <body>
 <p>
-    <a asp-action="Create">Crear nuevo</a>
+    <a asp-action="Create" style="color: white;">Crear nuevo</a>
 </p>
 <div class="FormatoT">
     <table class="table" style="color: white;">
