--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -35,9 +35,9 @@
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UsuarioBirhtDate" class="control-label"></label>
-                <input asp-for="UsuarioBirhtDate" class="form-control" />
-                <span asp-validation-for="UsuarioBirhtDate" class="text-danger"></span>
+                <label asp-for="EdadUsuario" class="control-label"></label>
+                <input asp-for="EdadUsuario" class="form-control" />
+                <span asp-validation-for="EdadUsuario" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Telefono" class="control-label"></label>
