--- a/Views/Usuario/Delete.cshtml
+++ b/Views/Usuario/Delete.cshtml
@@ -37,10 +37,10 @@
             @Html.DisplayFor(model => model.Apellido)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsuarioBirhtDate)
+            @Html.DisplayNameFor(model => model.EdadUsuario)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UsuarioBirhtDate)
+            @Html.DisplayFor(model => model.EdadUsuario)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Telefono)
