--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,6 +20,66 @@ html {
   overflow-x: hidden;
   background-color: #000000;
 }
+/* Botones */
+.botonCrear{
+  text-decoration: none;
+  font-size: 20px;
+ background-color: rgba(51, 255, 0, 0.658);
+ color: #000;
+ border-width: 4px;
+  border-style: inset;
+  border-radius: 10px;
+  padding: inherit;
+}
+.botonCrear2{
+  text-decoration: none;
+  font-size: 20px;
+ background-color: rgb(102, 255, 0);
+ color: #000;
+ border-width: 4px;
+  border-style: inset;
+  border-radius: 10px;
+  padding: inherit;
+}
+.botonEditar{
+  text-decoration: none;
+  font-size: 20px;
+  background-color: rgb(0, 255, 242);
+  color: #000;
+  border-width: 4px;
+   border-style: inset;
+   border-radius: 10px;
+   padding: inherit;
+}
+.botonEliminar{
+  text-decoration: none;
+  font-size: 20px;
+ background-color: red;
+ color: #000;
+ border-width: 4px;
+  border-style: inset;
+  border-radius: 10px;
+  padding: inherit;
+}
+.botonVolver{
+  text-decoration: none;
+  border-radius: 50px;
+  font-size: 15px;
+  color: #fff;
+  background-color: maroon;
+  border-color: maroon !important;
+  border-width: 4px;
+  border-style: solid;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px;
+}
+/* Fin Botones */
+table{
+  background-color: rgb(141, 142, 156);
+  backdrop-filter: blur(4px);
+  border-radius:25px 0;
+}
 .Formato{
   color:#ffffff;
   margin-top: 5rem;
