--- a/Views/Ranking/Create.cshtml
+++ b/Views/Ranking/Create.cshtml
@@ -35,6 +35,11 @@
                 <span asp-validation-for="Puntos" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Club" class="control-label"></label>
+                <input asp-for="Club" class="form-control" />
+                <span asp-validation-for="Club" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
