--- a/Views/Ranking/Delete.cshtml
+++ b/Views/Ranking/Delete.cshtml
@@ -36,6 +36,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Puntos)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Club)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Club)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
