--- a/Views/Localidad/Index.cshtml
+++ b/Views/Localidad/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<TesisPadel.Models.Localidad>
 
-@{
+ @{
     Layout = "_Layout";
 }
 
@@ -39,4 +39,44 @@
     </tbody>
 </table>
 </body>
-</html>
+</html> 
+@* <!--modal-->
+<div class="modal fade" id="ModalLocalidad" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Agregar Localidad</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" id="localidadId" value="0">
+                <div class="control-label">
+                    <input type="text"class="form-control" id="Nombre" autocomplete="off" onkeyup="this.value = this.value.toUpperCase()">
+                </div>
+                <div class="modal-footer">
+                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" onclick="GuardarRanking()" class="btn btn-primary">Guardar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div>
+     <h1 class="display-4 titulo">Ranking</h1>
+
+      <!-- Button trigger modal -->
+      <div class="mb-2">
+        <button type="button" onclick="VaciarFormulario()" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalClub">
+            Nuevo
+        </button>
+      </div>
+      <table class="table table-bordered table-striped table-condensed">
+    <thead>
+        <tr>
+            <th>Nombre</th>
+        </tr>
+    </thead>
+        <tbody id="tbody-ranking">        
+        </tbody>
+  </table>
+</div> *@
