--- a/Views/Usuario/Delete.cshtml
+++ b/Views/Usuario/Delete.cshtml
@@ -19,10 +19,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LocalidadId)
+            @Html.DisplayNameFor(model => model.Localidad)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LocalidadId)
+            @Html.DisplayFor(model => model.Localidad)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
@@ -37,10 +37,10 @@
             @Html.DisplayFor(model => model.Apellido)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EdadUsuario)
+            @Html.DisplayNameFor(model => model.Edad)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EdadUsuario)
+            @Html.DisplayFor(model => model.Edad)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Telefono)
