--- a/Views/Ranking/Create.cshtml
+++ b/Views/Ranking/Create.cshtml
@@ -1,7 +1,7 @@
 @model TesisPadel.Models.Ranking
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -47,7 +47,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver</a>
 </div>
 
 </body>
