--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -47,7 +47,7 @@ html {
   background-color: rgb(0, 255, 242);
   color: #000;
   border-width: 4px;
-   border-style: inset;
+   /* border-style: inset; */
    border-radius: 10px;
    padding: inherit;
 }
@@ -57,7 +57,7 @@ html {
  background-color: red;
  color: #000;
  border-width: 4px;
-  border-style: inset;
+  /* border-style: inset; */
   border-radius: 10px;
   padding: inherit;
 }
@@ -75,19 +75,22 @@ html {
   margin: 5px;
 }
 /* Fin Botones */
+.titulo{
+  margin-top: 5rem;
+}
 table{
   background-color: rgb(141, 142, 156);
   backdrop-filter: blur(4px);
   border-radius:25px 0;
 }
-.Formato{
+ .Formato{
   color:#ffffff;
   margin-top: 5rem;
 }
-.FormatoT{
+/* .FormatoT{
   color:#ffffff;
   margin-top: 5rem;
-}
+}  */
 .HTitulo{
 	color: #ffeba7;
 	font-size: 3em;
